# qmp-calculator

./: CMakeLists.txt  main.cpp  qm_petrick.cpp  qm_petrick.h
